# Lumitrade

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUDIT_DEPLOY_CHECKLIST.md  CLAUDE.md  README.md  docker-compose.yml  railway.toml  supervisord.conf
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  supervisord.conf
backend/lumitrade/: __main__.py  config.py  main.py
backend/lumitrade/ai_brain/: chart_generator.py  claude_client.py  confidence.py  consensus_engine.py  fallback.py  lesson_analyzer.py  lesson_filter.py  prompt_builder.py  quant_engine.py  scanner.py  sentiment_analyzer.py  tradingview_signal.py  tv_chart_screenshotter.py  validator.py
backend/lumitrade/analytics/: performance_analyzer.py  performance_context_builder.py
backend/lumitrade/core/: enums.py  exceptions.py  (+1 more)
backend/scripts/: _btc_d1_sweep.py  _btc_full_sweep.py  _btc_regime_sweep.py  _btc_signal_sweep.py  _btc_sweep.py  _ema200_jpy_sweep.py  _jpy_adx_sensitivity.py  _jpy_h4_combined.py  _jpy_h4_fast_ema.py  _jpy_signal_sweep.py  _jpy_sl_sweep.py  _mtf_sweep.py  _scale_out_sweep.py  backfill_trade_attribution.py  backtest.py  backtest_amd.py  backtest_v2.py  close_ghost_trades.py  compare_live_to_backtest.py  fetch_historical.py  go_live.sh  purge_bad_seed_rules.py  rebuild_trading_lessons.py  run_critical_tests.sh  trade_audit.py  trade_schema_inspect.py  verify_ema200_fix.py  verify_lesson_filter_live.py  verify_trade_history_fix.py
backend/tests/: conftest.py
(+302 files in other folders)
